--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Doğan</title>
     <link rel="shortcut icon" href="https://avatars.githubusercontent.com/u/107846848?v=4" type="image/x-icon" >
-    <meta name="description" content="Custy personal portfolio." />
+    <meta name="description" content="Doğan personal portfolio." />
 
     <link rel="stylesheet" href="css/style.css" />
 
